--- a/state-machine/Makefile
+++ b/state-machine/Makefile
@@ -3,3 +3,6 @@ build:
 	gcc -g -Wall -c -fPIC state_machine.c -o state_machine.o -std=c99
 	gcc -g -Wall -c -fPIC motor.c -o motor.o -std=c99
 	gcc -shared fault.o state_machine.o motor.o -o libstate-machine.so
+
+fmt:
+	clang-format -i *.c *.h
